--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "css-loader": "^6.9.0",
+    "html-inline-script-webpack-plugin": "^3.2.1",
     "html-webpack-plugin": "^5.6.0",
     "inline-source-webpack-plugin": "^3.0.1",
     "style-loader": "^3.3.4",
