--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "gh-pages": "^2.2.0",
     "quill": "^1.3.7",
     "react": "^16.13.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^16.13.1",
     "react-draggable": "^4.4.6",
-    "react-scripts": "3.4.1"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
